[package]
name = "race-blackjack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
race-core = { path = "../../core" }
race-proc-macro = { path = "../../proc-macro" }
serde_json = "1.0.85"
serde = "1.0.144"
borsh = "0.9.3"

[dev-dependencies]
race-test = { path = "../../test" }
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.64"
