[package]
name = "race-example-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../../core" }
race-client = { path = "../../client" }
race-transport = { path = "../../transport" }
borsh = "0.9.3"
serde_json = "1.0.85"
serde = "1.0.144"
