[package]
name = "mpl-program-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../../../core" }
race-transport = { path = "../../../transport" }
race-env = { path = "../../../env" }
solana-program = ">1.6.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
#spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }
#arrayref = "0.3.6"
#solana-program = "1.14.0"
#solana-logger = "1.14.0"
#solana-program-test = "1.9.0"
#solana-sdk = "1.9.13"

#spl-token = "3.3.0"


[dev-dependencies]
#solana-logger = ">1.6.0"
solana-program-test = ">1.10.0"
solana-sdk = { version = ">1.10.0"}
#mpl-token-metadata = "1.2.5"
#solana-frozen-abi = "1.14.11"
#solana-sdk = "=1.14.10"
#tokio = { version = "1.21.0", features = ["full"] }

[features]
default = ["test-bpf"]
no-entrypoint = []
test-bpf = []
