[package]
name = "race-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../../../core" }
race-transport = { path = "../../../transport" }
race-env = { path = "../../../env" }
solana-program = ">1.6.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = ">1.10.0"
solana-sdk = { version = ">1.10.0"}

[features]
default = ["test-bpf"]
no-entrypoint = []
test-bpf = []
