[package]
name = "race-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
race-core = { path = "../../../core" }
#race-transport = { path = "../../../transport" }
#race-env = { path = "../../../env" }
solana-program = ">1.6.1"
spl-token = {version = ">3.3.0", features = ["no-entrypoint"]}
borsh = "0.9.3"
borsh-derive = "0.9.3"

[dev-dependencies]
solana-program-test = ">1.6.1"
solana-sdk = { version = ">1.6.1"}
solana-client = ">1.6.1"

[features]
default = ["test-bpf"]
no-entrypoint = []
test-bpf = []
